# cours_python_upec

./: README.md
cours_python_upec/: pyproject.toml
cours_python_upec/cours_python_upec/: sommaire new.ipynb
cours_python_upec/cours_python_upec/.ipynb_checkpoints/: sommaire new-checkpoint.ipynb  sommaire-checkpoint.ipynb
cours_python_upec/cours_python_upec/PyBooks/: 02_end_to_end_machine_learning_project.ipynb  04_training_linear_models.ipynb  Installation_NB.ipynb  Manipulation des donnees avec Pandas.ipynb  Tarif2_ml.ipynb  Untitled1.ipynb
cours_python_upec/cours_python_upec/PyBooks/.ipynb_checkpoints/: 04_training_linear_models-checkpoint.ipynb  Ess_adult_dentaire-checkpoint.ipynb  Ess_adult_optique-checkpoint.ipynb  Manipulation des donnees avec Pandas-checkpoint.ipynb  Modélisation Essentielle-checkpoint.ipynb  Stats descriptives-checkpoint.ipynb
cours_python_upec/cours_python_upec/PyBooks/PyParis_XII_M2/: Scrap_carrefour.ipynb  sommaire.ipynb
cours_python_upec/cours_python_upec/cours/: 1_Concepts_de_base.ipynb  2_Strings.ipynb  3_Structures_programmatiques.ipynb  4_Fonctions.ipynb  5_Pandas.ipynb  6_Traitement_de_donnees.ipynb  7_Manipulation_de_donnees.ipynb  Html boxes.ipynb  Types d'objets de base.ipynb  rappels.ipynb
cours_python_upec/cours_python_upec/cours/.ipynb_checkpoints/: 1_Concepts_de_base-checkpoint.ipynb  2_Strings-checkpoint.ipynb  3_Structures_programmatiques-checkpoint.ipynb  4_Fonctions-checkpoint.ipynb  (+4 more)
cours_python_upec/cours_python_upec/data/: Output_GFLT.pickle  Output_GFLT.xlsx  bike_share.txt  mois_annee.csv  voyagessncf.json
(+86 files in other folders)
