[tool.poetry]
name = "cours-python-upec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cours_python_upec"}]

[tool.poetry.dependencies]
python = "3.10.12"
notebook = "^7.0.4"
pandas = "^2.1.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
